@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="build_number">7860</string>
+	<string name="build_number">7861</string>
 </resources>
