@@ -1,5 +1,5 @@
 #ifndef __build_h
 #define __build_h
-#define NETXMS_VERSION_BUILD 7860
-#define NETXMS_VERSION_BUILD_STRING _T("7860")
+#define NETXMS_VERSION_BUILD 7861
+#define NETXMS_VERSION_BUILD_STRING _T("7861")
 #endif
