@@ -1,5 +1,5 @@
 package org.netxms.base;
 public final class BuildNumber {
-   public static final String TEXT = "7860";
-   public static final int NUMBER = 7860;
+   public static final String TEXT = "7861";
+   public static final int NUMBER = 7861;
 }
